[statistics] Hide "add beamer" for screens with no EDID

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -47,6 +47,7 @@
     "lang_modelStats": "PC-Modelle",
     "lang_more": "Mehr",
     "lang_newMachines": "Neue Ger\u00e4te",
+    "lang_noEdid": "Kein EDID",
     "lang_noProjectorsDefined": "Keine Beamer-Overrides definiert",
     "lang_notes": "Anmerkungen",
     "lang_onlineMachines": "Gestartete Clients",
