--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -47,6 +47,7 @@
     "lang_modelStats": "PC models",
     "lang_more": "More",
     "lang_newMachines": "New machines",
+    "lang_noEdid": "No EDID",
     "lang_noProjectorsDefined": "No projector overrides defined",
     "lang_notes": "Notes",
     "lang_onlineMachines": "Online clients",
