[main] Make lang_yes and lang_no global

--- a/modules-available/main/lang/de/global-tags.json
+++ b/modules-available/main/lang/de/global-tags.json
@@ -8,8 +8,10 @@
     "lang_hint": "Hinweis",
     "lang_hours": "Stunde(n)",
     "lang_next": "Weiter",
+    "lang_no": "Nein",
     "lang_reset": "Zur\u00fccksetzen",
     "lang_save": "Speichern",
     "lang_today": "Heute",
+    "lang_yes": "Ja",
     "lang_yesterday": "Gestern"
 }
