--- a/modules-available/main/lang/en/global-tags.json
+++ b/modules-available/main/lang/en/global-tags.json
@@ -8,8 +8,10 @@
     "lang_hint": "Hint",
     "lang_hours": "hour(s)",
     "lang_next": "Next",
+    "lang_no": "No",
     "lang_reset": "Reset",
     "lang_save": "Save",
     "lang_today": "Today",
+    "lang_yes": "Yes",
     "lang_yesterday": "Yesterday"
 }
