[dozmod] Show if templates are modified or have their defaults updated

--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -16,7 +16,6 @@
     "lang_defaultLecturePermissions": "F\u00fcr Veranstaltungen",
     "lang_defaultPermissions": "Standardberechtigungen",
     "lang_delButton": "Gew\u00e4hlte VMs endg\u00fcltig l\u00f6schen",
-    "lang_description": "Beschreibung",
     "lang_descriptionPermissionConfig": "Dies sind die Berechtigungen, die ein Benutzer standardm\u00e4\u00dfig f\u00fcr fremde VMs\/Veranstaltungen hat. Sie werden angewandt, wenn der Besitzer keine anderweitigen Berechtigungen w\u00e4hlt.",
     "lang_descriptionRuntimeLimits": "Hier k\u00f6nnen Sie verschiedene Limits festlegen, z.B. wie lange eine VM nach dem Hochladen g\u00fcltig ist. Nach Ablauf dieses Zeitraums ist der Verantwortliche gezwungen, eine neue Version der VM hochzuladen. Damit k\u00f6nnen Sie das Ansammeln nicht mehr ben\u00f6tigter VMs eind\u00e4mmen. Weiterhin k\u00f6nnen Sie die maximale Anzahl gleichzeitiger Transfers pro Benutzer einschr\u00e4nken.\r\n\r\nVer\u00e4nderte Einstellungen wirken sich nicht auf bereits bestehende VMs aus.",
     "lang_description_delete_images": "Diese Liste zeigt VMs, die entweder abgelaufen sind, oder deren Datei besch\u00e4digt, verschoben oder gel\u00f6scht wurde. Diese Images sind zur Zeit im Lehrpool nicht verf\u00fcgbar, ihre endg\u00fcltige L\u00f6schung muss aber manuell best\u00e4tigt werden, um gr\u00f6\u00dfere Katastrophen durch Softwarefehler, verstellte Systemuhren etc. zu vermeiden.",
@@ -34,6 +33,7 @@
     "lang_image": "VM",
     "lang_lastEditor": "Zuletzt bearbeitet von",
     "lang_lastLogin": "Letzte Anmeldung",
+    "lang_latestVersion": "Neuste Version",
     "lang_lecture": "Veranstaltung",
     "lang_lecturePermissionAdmin": "Administration",
     "lang_lecturePermissionEdit": "Bearbeiten",
@@ -46,7 +46,7 @@
     "lang_maxLectureVisibility": "Sp\u00e4testes Enddatum einer Veranstaltung (Tage in der Zukunft)",
     "lang_maxTransfers": "Maximale Zahl gleichzeitiger Up-\/Downloads pro Benutzer",
     "lang_miscOptions": "Verschiedene Einstellungen",
-    "lang_name": "Name",
+    "lang_modified": "Modifiziert",
     "lang_organization": "Einrichtung",
     "lang_organizationList": "Liste der Einrichtungen",
     "lang_organizationListHeader": "Nutzungsrechte f\u00fcr den Satelliten festlegen",
@@ -56,6 +56,7 @@
     "lang_placeholders": "Platzhalter",
     "lang_port": "Port",
     "lang_reallyResetTemplates": "Sind Sie sicher, dass Sie alle Texte l\u00f6schen und auf die Standardwerte zur\u00fccksetzen wollen?",
+    "lang_replaceWithOriginal": "Originaltext in Textbox laden",
     "lang_replyTo": "Reply-To Adresse (z.B. Helpdesk)",
     "lang_runtimeConfig": "Laufzeit-Konfiguration",
     "lang_runtimeConfigHeadline": "Laufzeit-Konfiguration",
@@ -76,6 +77,7 @@
     "lang_test": "Test-Mail senden",
     "lang_testConfiguration": "Um die Konfiguration zu testen, geben Sie hier eine Empf\u00e4ngeradresse ein",
     "lang_testRecipient": "Empf\u00e4nger",
+    "lang_thisVersion": "Diese Version",
     "lang_updateTime": "Letzte Bearbeitung",
     "lang_user": "Benutzername",
     "lang_userId": "Benutzer-ID",
