--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -16,7 +16,6 @@
     "lang_defaultLecturePermissions": "For lectures",
     "lang_defaultPermissions": "Default permissions",
     "lang_delButton": "Permanently delete selected images",
-    "lang_description": "This list shows images that reached their expire date, or where the image file in the file system is damaged or missing. You need to manually confirm the deletion of these files for safety reasons (software bugs, wrong system time, etc.).",
     "lang_descriptionPermissionConfig": "These are the default permissions being used for VMs and lectures if the owner does not specify any.",
     "lang_descriptionRuntimeLimits": "Here you can define some limits, e.g. how long a newly uploaded VM will be valid. This should make sure that you don't end up with a lot of old, unused VMs over time.\r\n\r\nModified settings won't apply for already existing VMs.",
     "lang_description_delete_images": "This is a list of VMs that either expired, or where the disk image is damaged or missing. These VMs are not available in bwLehrpool currently, but you have to manually confirm the deletion of the disk images for safety reasons (clock skew etc.)",
@@ -34,6 +33,7 @@
     "lang_image": "VM",
     "lang_lastEditor": "Edited by",
     "lang_lastLogin": "Last login",
+    "lang_latestVersion": "latest version",
     "lang_lecture": "Lecture",
     "lang_lecturePermissionAdmin": "Administrate",
     "lang_lecturePermissionEdit": "Edit",
@@ -46,7 +46,7 @@
     "lang_maxLectureVisibility": "Max time lecture end date may lie in the future (days)",
     "lang_maxTransfers": "Max concurrent transfers per user",
     "lang_miscOptions": "Misc options",
-    "lang_name": "Name",
+    "lang_modified": "modified",
     "lang_organization": "Organization",
     "lang_organizationList": "List of organizations",
     "lang_organizationListHeader": "Set access permissions for organizations",
@@ -56,6 +56,7 @@
     "lang_placeholders": "Placeholders",
     "lang_port": "Port",
     "lang_reallyResetTemplates": "Are you sure you want to reset all texts to their default values?",
+    "lang_replaceWithOriginal": "load original text into text box",
     "lang_replyTo": "Reply-To address",
     "lang_runtimeConfig": "Limits and Defaults",
     "lang_runtimeConfigHeadline": "Configure limits and defaults for bwLehrpool-Suite",
@@ -76,6 +77,7 @@
     "lang_test": "Send test mail",
     "lang_testConfiguration": "To test the configuration, enter a recipient address here",
     "lang_testRecipient": "Recipient",
+    "lang_thisVersion": "this version",
     "lang_updateTime": "Last update",
     "lang_user": "User name",
     "lang_userId": "User id",
