[locationinfo] Started rewrite for panel-based approach

--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -24,8 +24,6 @@
     "lang_general": "General",
     "lang_language": "Language",
     "lang_languageTooltip": "The language the frontend uses",
-    "lang_locationIsHidden": "Hidden",
-    "lang_locationIsHidden_title": "If checked the API doesn't return information about the room",
     "lang_locationName": "Name",
     "lang_locationSettings": "Settings",
     "lang_mainHeader": "Infoscreen",
@@ -38,8 +36,9 @@
     "lang_monTilFr": "Monday - Friday",
     "lang_nameTooltip": "Defines the name of the server",
     "lang_noServer": "<no server>",
-    "lang_openingTime": "Opening times",
+    "lang_openingTime": "Opening time",
     "lang_pleaseSelect": "Please select...",
+    "lang_remoteSchedule": "Time table retrieval",
     "lang_room": "Room",
     "lang_roomId": "Room ID",
     "lang_roomIdTooltip": "The ID of the room the server needs, for querying the calendar data",
