--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -24,8 +24,6 @@
     "lang_general": "Allgemein",
     "lang_language": "Sprache",
     "lang_languageTooltip": "Legt die Sprache der angezeigten Oberfl\u00e4che fest",
-    "lang_locationIsHidden": "Versteckt",
-    "lang_locationIsHidden_title": "Wenn aktiv, dann liefert die API keine Informationen \u00fcber diesen Raum",
     "lang_locationName": "Name",
     "lang_locationSettings": "Einstellungen",
     "lang_mainHeader": "Infoscreen",
@@ -38,8 +36,9 @@
     "lang_monTilFr": "Montag - Freitag",
     "lang_nameTooltip": "Legt den Namen des Servers fest",
     "lang_noServer": "<Kein Server>",
-    "lang_openingTime": "\u00d6ffnungszeiten",
+    "lang_openingTime": "\u00d6ffnungszeit",
     "lang_pleaseSelect": "Bitte w\u00e4hlen...",
+    "lang_remoteSchedule": "Abruf Belegungsplan",
     "lang_room": "Raum",
     "lang_roomId": "Raum ID",
     "lang_roomIdTooltip": "Die Raum ID, die der Server ben\u00f6tigt, um Kalenderdaten abzurufen",
