--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -1,32 +1,41 @@
 {
+    "lang_defaultPanel": "Default panel",
     "lang_addServer": "Server",
+    "lang_summaryPanel": "Summary panel",
+    "lang_areYouSure": "Are you sure?",
     "lang_autoScale": "Auto Days",
     "lang_autoscaleTooltip": "Calculates the optimum amount of days to show from the display width",
-    "lang_buildingTable": "Building \/ Room List",
+    "lang_backend": "Backend",
+    "lang_backends": "Backends",
     "lang_calendar": "Calendar",
     "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
     "lang_checkConnection": "Check connection",
     "lang_closingTime": "Closing time",
     "lang_config": "Config",
     "lang_configupdateTooltip": "Time interval the config gets updated (in minutes)",
+    "lang_createPanel": "Create panel",
     "lang_credentials": "Login",
-    "lang_customUrl": "Custom URL",
-    "lang_customUrlTooltip": "This URL will override the config settings from the room",
     "lang_day": "Day",
     "lang_daysToShow": "Days",
     "lang_daysToShowTooltip": "Defines the amount of days to show in the calendar",
     "lang_deleteConfirmation": "Are you sure?",
     "lang_display": "Display",
+    "lang_displayName": "Name",
+    "lang_displayNameTooltip": "Display name for this panel",
     "lang_ecoMode": "E-Ink mode",
     "lang_ecoTooltip": "Symbolic based pc state pictures are used instead of the colour based ones",
+    "lang_editPanel": "Edit panel",
     "lang_entryName": "Name",
+    "lang_error": "Error",
     "lang_expertMode": "Expert mode",
+    "lang_fourLocsHint": "You can pick up to four locations that will be shown in this panel.",
     "lang_general": "General",
     "lang_language": "Language",
     "lang_languageTooltip": "The language the frontend uses",
     "lang_locationName": "Name",
     "lang_locationSettings": "Settings",
-    "lang_mainHeader": "Infoscreen",
+    "lang_locations": "Locations",
+    "lang_locationsTable": "Rooms \/ Locations",
     "lang_mode": "Mode",
     "lang_mode1": "Calendar & Room",
     "lang_mode2": "Calendar",
@@ -35,9 +44,17 @@
     "lang_modeTooltip": "The display modes the frontend supports",
     "lang_monTilFr": "Monday - Friday",
     "lang_nameTooltip": "Defines the name of the server",
+    "lang_noLocationsWarning": "Please select at least one location this panel should display",
     "lang_noServer": "<no server>",
     "lang_openingTime": "Opening time",
+    "lang_openingtimes": "Opening times",
+    "lang_panel": "Panel",
+    "lang_panelType": "Type",
+    "lang_panels": "Panels",
+    "lang_panelsTable": "Manage panels",
     "lang_pleaseSelect": "Please select...",
+    "lang_recursiveServerSet": "Also set for all child locations",
+    "lang_recursiveSetTooltip": "If checked, all direct and indirect child locations will be configured to use the backend server selected above",
     "lang_remoteSchedule": "Time table retrieval",
     "lang_room": "Room",
     "lang_roomId": "Room ID",
@@ -54,7 +71,7 @@
     "lang_scaleTooltip": "[10-90] Defines the calendar width (in percent)",
     "lang_sec": "sec",
     "lang_server": "Server",
-    "lang_serverTable": "Server List",
+    "lang_serverTable": "Manage backend servers",
     "lang_serverTooltip": "Defines from which server the room queries the calendar data",
     "lang_serverType": "Type",
     "lang_shortFriday": "Fri",
