[translation] Added translation for 'subnet' filter

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -69,6 +69,7 @@
     "lang_showList": "Liste",
     "lang_showVisualization": "Visualisierung",
     "lang_sockets": "Sockel",
+    "lang_subnet": "Subnetz",
     "lang_tempPart": "Temp. Partition",
     "lang_tempPartStats": "Tempor\u00e4re Partition",
     "lang_thoseAreProjectors": "Diese Modellnamen werden als Beamer behandelt, auch wenn die EDID-Informationen des Ger\u00e4tes anderes berichten.",
