--- a/modules-available/exams/lang/en/module.json
+++ b/modules-available/exams/lang/en/module.json
@@ -1,5 +1,5 @@
 {
-    "module_name": "Exam mode",
+    "module_name": "Exam Mode",
     "title_add-exam": "Add exam",
     "title_edit-exam": "Edit exam",
     "warning_lecture_is_not_enabled": "Warning: Lecture is not enabled by tutor"
