--- a/modules-available/exams/lang/en/template-tags.json
+++ b/modules-available/exams/lang/en/template-tags.json
@@ -2,7 +2,7 @@
     "lang_actions": "Actions",
     "lang_addExam": "Add exam period",
     "lang_addingBasedOnLecture": "Adding exam period based on lecture",
-    "lang_allExamPeriods": "All exam periods",
+    "lang_allExamPeriods": "All Exam Periods",
     "lang_autoLogin": "Skip login",
     "lang_autoLoginInfo": "If this option is enabled, the login mask will not be shown and instead, an anonymous session is opened. This is useful if there is another authentication mechanism in place inside the VM, e.g. web-based (LMS). The user will see the vmChooser right away after booting up the computer. You can combine this option with the \"Automatically launched course\" feature, so the boot process is completely automated. Note that when using \"skip login\", no personalization like mapping of home directories is possible inside the VM without additional actions by the user and\/or creator of the VM.",
     "lang_autoStartInfo": "Here you can select a course that will be launched automatically after the user logged in. This will skip the vmChooser screen, and directly start the couse selected here. This function can be combined with the \"skip login\" feature to further automate the boot-up process.",
@@ -15,15 +15,17 @@
     "lang_deleteConfirmation": "Are you sure?",
     "lang_description": "Description",
     "lang_duration": "Duration",
-    "lang_editExam": "Edit Exam Period",
+    "lang_editExam": "Edit exam period",
     "lang_end": "End",
     "lang_end_date": "End Date",
     "lang_end_time": "Time",
     "lang_examModeDescription": "Here you can define time spans during which selected rooms will be set to exam mode. In exam mode, the client computers are more locked down than usual so it is suitable for writing electronic exams.",
     "lang_global": "Global",
-    "lang_headingAllExamLectures": "Upcoming lectures marked as exams (30 days)",
-    "lang_headingGraphicalOverview": "Graphical overview",
-    "lang_headingMain": "bwLehrpool exam mode",
+    "lang_headingAddExam": "Add Exam Period",
+    "lang_headingAllExamLectures": "Upcoming Lectures Marked As Exams (30 Days)",
+    "lang_headingEditExam": "Edit Exam Period",
+    "lang_headingGraphicalOverview": "Graphical Overview",
+    "lang_headingMain": "bwLehrpool Exam Mode",
     "lang_id": "ID",
     "lang_lectureName": "Lecture name",
     "lang_lectureOutOfRange": "Hint: Start or end date of given lecture lies outside of exam period given above",
