[dozmod] fixed inconsistencies + some issues in [internetaccess] and [news]

--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -4,6 +4,7 @@
     "lang_allowLoginDescription": "Wenn diese Option aktiviert ist, k\u00f6nnen sich alle Mitarbeiter der Einrichtung \u00fcber die bwLehrpool-Suite anmelden und VMs\/Veranstaltungen verwalten. Wenn Sie diese Option deaktivieren, m\u00fcssen Sie in der Untersektion \"Benutzer und Berechtigungen\" jeden Benutzer nach dem ersten Loginversuch manuell freischalten.",
     "lang_asteriskRequired": "Felder mit (*) sind erforderlich",
     "lang_blockCount": "Anzahl Bl\u00f6cke",
+    "lang_bwlehrpoolsuite": "bwLehrpool-Suite",
     "lang_canLoginOrganization": "Nutzer dieser Einrichtung k\u00f6nnen sich am Satelliten anmelden",
     "lang_canLoginUser": "Nutzer kann sich am Satelliten anmelden",
     "lang_createTime": "Erstellt",
@@ -53,11 +54,12 @@
     "lang_os": "Betriebssystem",
     "lang_owner": "Besitzer",
     "lang_password": "Passwort",
+    "lang_passwordplaceholder": "SMTP Passwort",
     "lang_placeholders": "Platzhalter",
     "lang_port": "Port",
     "lang_reallyResetTemplates": "Sind Sie sicher, dass Sie alle Texte l\u00f6schen und auf die Standardwerte zur\u00fccksetzen wollen?",
     "lang_replaceWithOriginal": "Originaltext in Textbox laden",
-    "lang_replyTo": "Reply-To Adresse (z.B. Helpdesk)",
+    "lang_replyTo": "Reply-To Adresse",
     "lang_runtimeConfig": "Laufzeit-Konfiguration",
     "lang_runtimeConfigHeadline": "Laufzeit-Konfiguration",
     "lang_runtimeConfigLimits": "Beschr\u00e4nkungen",
@@ -84,7 +86,8 @@
     "lang_userList": "Benutzerliste",
     "lang_userListDescription": "Hier k\u00f6nnen Sie individuelle Nutzer zu \"Super-Usern\" machen. Diese haben in der bwLehrpool-Suite auf alle Veranstaltungen und VMs Vollzugriff, unabh\u00e4ngig von den gesetzten Berechtigungen. Au\u00dferdem k\u00f6nnen Sie hier Benutzer vom Zugriff mittels der bwLehrpool-Suite ausschlie\u00dfen.",
     "lang_userListHeader": "Dem Satelliten bekannte Benutzer",
-    "lang_username": "Benutzername (SMTP-Auth)",
+    "lang_username": "Benutzername",
+    "lang_usernameplaceholder": "SMTP Benutzername",
     "lang_version": "Version vom",
     "lang_when": "Wann"
 }
