--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -4,6 +4,7 @@
     "lang_allowLoginDescription": "If this option is enabled, all members of the organization marked as staff or employee are allowed to login to this server and manage VMs\/courses. Otherwise, new users need to be individually allowed access after their first login attempt by visiting the sub page \"users and permissions\" in this web interface.",
     "lang_asteriskRequired": "Fields marked with (*) are required",
     "lang_blockCount": "Block count",
+    "lang_bwlehrpoolsuite": "bwLehrpool-Suite",
     "lang_canLoginOrganization": "Users from this organization can login",
     "lang_canLoginUser": "This user can login",
     "lang_createTime": "Created",
@@ -28,7 +29,7 @@
     "lang_followingPlaceholdersUnused": "The following placeholders are not being used",
     "lang_hasNewer": "Newer version exists",
     "lang_hash": "Hash",
-    "lang_heading": "Images marked for deletion",
+    "lang_heading": "Images Marked for Deletion",
     "lang_host": "Host",
     "lang_image": "VM",
     "lang_lastEditor": "Edited by",
@@ -39,27 +40,28 @@
     "lang_lecturePermissionEdit": "Edit",
     "lang_loadDefaults": "Reset all templates to their defaults",
     "lang_mailConfig": "SMTP configuration for sending mails",
-    "lang_mailConfigHeadline": "email configuration",
+    "lang_mailConfigHeadline": "Email Configuration",
     "lang_mailDescription": "Fill in the following fields if you want to notify tutors\/professors\/lecturers about expiring VMs and lectures. If you leave one of the required fields blank, the feature will be disabled.",
-    "lang_mailTemplates": "E-Mail templates",
+    "lang_mailTemplates": "E-Mail Templates",
     "lang_maxImageValidity": "New VM validity (days)",
     "lang_maxLectureVisibility": "Max time lecture end date may lie in the future (days)",
     "lang_maxTransfers": "Max concurrent transfers per user",
     "lang_miscOptions": "Misc options",
     "lang_modified": "modified",
     "lang_organization": "Organization",
-    "lang_organizationList": "List of organizations",
+    "lang_organizationList": "List of Organizations",
     "lang_organizationListHeader": "Set access permissions for organizations",
     "lang_os": "Operating System",
     "lang_owner": "Owner",
     "lang_password": "Password",
+    "lang_passwordplaceholder": "SMTP Password",
     "lang_placeholders": "Placeholders",
     "lang_port": "Port",
     "lang_reallyResetTemplates": "Are you sure you want to reset all texts to their default values?",
     "lang_replaceWithOriginal": "load original text into text box",
     "lang_replyTo": "Reply-To address",
     "lang_runtimeConfig": "Limits and Defaults",
-    "lang_runtimeConfigHeadline": "Configure limits and defaults for bwLehrpool-Suite",
+    "lang_runtimeConfigHeadline": "Configure Limits and Defaults for bwLehrpool-Suite",
     "lang_runtimeConfigLimits": "Limitations",
     "lang_senderAddress": "Sender address",
     "lang_senderName": "Sender's display name",
@@ -81,10 +83,11 @@
     "lang_updateTime": "Last update",
     "lang_user": "User name",
     "lang_userId": "User id",
-    "lang_userList": "User list",
+    "lang_userList": "User List",
     "lang_userListDescription": "Here you can promote \"super users\", which will have all permissions in the bwLehrpool-Suite. You can also ban users from accessing this server via the bwLehrpool-Suite.",
     "lang_userListHeader": "Users known to this satellite",
-    "lang_username": "User name (SMTP auth)",
+    "lang_username": "Username",
+    "lang_usernameplaceholder": "SMTP Username",
     "lang_version": "Version timestamp",
     "lang_when": "When"
 }
